<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_byzantium">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.75"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.25"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toTopOf="@id/editTextEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/wwe_logo"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.75"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/pale_silver"
        android:backgroundTint="@color/almond"
        android:inputType="textEmailAddress"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.75"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/pale_silver"
        android:backgroundTint="@color/almond"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/almond"
        android:text="@string/log_in"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/buttonSignIn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.35"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.05"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/almond"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.4"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.03"
        android:fontFamily="sans-serif"
        android:text="@string/no_account"
        android:textColor="@color/almond"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/buttonSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal" />
</androidx.constraintlayout.widget.ConstraintLayout>