<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SignIn"
    android:background="@color/dark_byzantium">

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.75"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:ems="10"
        android:hint="@string/last_name"
        android:textColorHint="@color/pale_silver"
        android:backgroundTint="@color/almond"
        android:inputType="textPersonName"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />
    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.75"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:ems="10"
        android:hint="@string/first_name"
        android:textColorHint="@color/pale_silver"
        android:backgroundTint="@color/almond"
        android:inputType="textPersonName"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />
    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.75"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:ems="10"
        android:hint="@string/phone"
        android:textColorHint="@color/pale_silver"
        android:backgroundTint="@color/almond"
        android:inputType="phone"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.75"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:autofillHints=""
        android:backgroundTint="@color/almond"
        android:ems="10"
        android:hint="@string/adress"
        android:inputType="textPostalAddress"
        android:textColorHint="@color/pale_silver"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.75"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/pale_silver"
        android:backgroundTint="@color/almond"
        android:inputType="textEmailAddress"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.75"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:backgroundTint="@color/almond"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/pale_silver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.4"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.07"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/almond"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <ImageView
        android:id="@+id/imageViewLogoNoSalt"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.75"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/editTextLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/wwe_logo_without_salt"/>
</androidx.constraintlayout.widget.ConstraintLayout>